upadte user api
