# server.go
@@ -38,6 +38,7 @@ func (server *Server) SetupRouter() {
 	server.router.GET("/api/v1/user", server.jwtservice.AuthRequired, server.usercontroller.Users)
 	server.router.GET("/api/v1/user/:name", server.jwtservice.AuthRequired, server.usercontroller.User)
 	server.router.DELETE("/api/v1/user", server.jwtservice.AuthRequired, server.accountcontroller.Delete)
+	server.router.PUT("/api/v1/user", server.jwtservice.AuthRequired, server.accountcontroller.Update)
 	docs.SwaggerInfo.BasePath = "/api/v1"
 	server.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 }
